syntax = "proto3";

package driver;

option go_package = "./pkg/pb";

message CreateDriverRequest {
    string name = 1;
    string vehicle = 2;
    string email = 3;
    string password = 4;
    string phone = 5;
    string license_number = 6;
}

message CreateDriverResponse {
   int64 status = 1;
   string error = 2;
   int64 id = 3;
   string name = 4;
   string vehicle = 5;
   string email = 6;
}

message UpdateDriverLocationRequest {
   int64 id = 1;
   double latitude = 2;
   double longitude = 3;
}

message UpdateDriverLocationResponse {
   string status = 1;
   string message = 2;
}

service DriverService {
   rpc CreateDriver(CreateDriverRequest) returns (CreateDriverResponse);
   rpc UpdateDriverLocation(UpdateDriverLocationRequest) returns (UpdateDriverLocationResponse);
}